syntax = "proto3";

package whiterabbit.group;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "shared.proto";

message Group {
  string id = 1;
  google.protobuf.Timestamp createdAt = 2;
  google.protobuf.Timestamp updatedAt = 3;

  string name = 4;
  string description = 5;

  repeated string admins = 6;
  repeated string members = 7;
}

message GroupPage {
  whiterabbit.shared.PageInfo pageInfo = 1;
  repeated GroupItem items = 2;
}

message GroupItem {
  string cursor = 1;
  Group data = 2;
}

message GroupResponse {
  Group group = 1;
}

message CreateCommand {
  optional string id = 1;
  string name = 2;
  string description = 3;
  repeated string admins = 4;
  repeated string members = 5;
}

message UpdateCommand {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
  whiterabbit.shared.NullableStringArray admins = 4;
  whiterabbit.shared.NullableStringArray members = 5;
}

message DeleteCommand {
  string id = 1;
}

message Command {
  oneof command {
    CreateCommand create = 1;
    UpdateCommand update = 2;
    DeleteCommand delete = 3;
  }
}

message Commands {
  repeated Command commands = 1;
}

service GroupService {
  rpc findOne(google.protobuf.StringValue) returns (GroupResponse);
  rpc findPage(whiterabbit.shared.FindPageRequest) returns (GroupPage);

  rpc handle(Command) returns (GroupResponse);
  rpc handleAll(Commands) returns (stream GroupResponse);
}
